--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,20 +5,20 @@
          version="6.0"
          metadata-complete="false">
 
-    <listener>
-        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateDataSource</listener-class>
-    </listener>
+<!--    <listener>-->
+<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateDataSource</listener-class>-->
+<!--    </listener>-->
 
-    <listener>
-        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateServices</listener-class>
-    </listener>
+<!--    <listener>-->
+<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateServices</listener-class>-->
+<!--    </listener>-->
 
-    <listener>
-        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateControllers</listener-class>
-    </listener>
-
-    <listener>
-        <listener-class>pl.edu.pg.eti.kask.configuration.listener.InitializedData</listener-class>
-    </listener>
+<!--    <listener>-->
+<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateControllers</listener-class>-->
+<!--    </listener>-->
+<!--    <context-param>-->
+<!--        <param-name>pathDirectory</param-name>-->
+<!--        <param-value>C:\\Users\\Damian\\Pictures\\TEMP</param-value>-->
+<!--    </context-param>-->
 
 </web-app>
