--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,20 +5,29 @@
          version="6.0"
          metadata-complete="false">
 
-<!--    <listener>-->
-<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateDataSource</listener-class>-->
-<!--    </listener>-->
+    <context-param>
+        <param-name>jakarta.faces.FACELETS_SKIP_COMMENTS </param-name>
+        <param-value>true</param-value>
+    </context-param>
 
-<!--    <listener>-->
-<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateServices</listener-class>-->
-<!--    </listener>-->
+    <context-param>
+        <param-name>jakarta.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
 
-<!--    <listener>-->
-<!--        <listener-class>pl.edu.pg.eti.kask.configuration.listener.CreateControllers</listener-class>-->
-<!--    </listener>-->
-<!--    <context-param>-->
-<!--        <param-name>pathDirectory</param-name>-->
-<!--        <param-value>C:\\Users\\Damian\\Pictures\\TEMP</param-value>-->
-<!--    </context-param>-->
+    <servlet>
+        <servlet-name>facesServlet</servlet-name>
+        <servlet-class>jakarta.faces.webapp.FacesServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>facesServlet</servlet-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
+        <welcome-file>index.xhtml</welcome-file>
+    </welcome-file-list>
+
 
 </web-app>
